Crash attempting to use 'bpy.ops.paint.image_paint()' #47534

Closed
opened 2016-02-22 23:08:25 +01:00 by Lubos · 7 comments

System Information
OSX 10.11.3, Intel Iris Pro 5200

Blender Version
Broken: 2.76b f337fea

Short description of error
After trying to perform texture painting programatically from Python, bpy.ops.paint.image_paint() causes a crash.

Exact steps for others to reproduce the error

  1. Run attached script in .blend file
  2. Move cursor to the View3D area
  3. Hit space and execute 'Paint Test' operator

A call stack from XCode when the crash occurs:
xcode_debug.png

The painting works fine when doing it manually. There may be some mistake I am doing, but could not find any other example on 'image_paint()' usage.

The same issue looks to be reported here: http://blenderartists.org/forum/showthread.php?381419

image_paint_test.blend

Thanks for looking.

**System Information** OSX 10.11.3, Intel Iris Pro 5200 **Blender Version** Broken: 2.76b f337fea **Short description of error** After trying to perform texture painting programatically from Python, bpy.ops.paint.image_paint() causes a crash. **Exact steps for others to reproduce the error** 1. Run attached script in .blend file 2. Move cursor to the View3D area 3. Hit space and execute 'Paint Test' operator A call stack from XCode when the crash occurs: ![xcode_debug.png](https://archive.blender.org/developer/F285221/xcode_debug.png) The painting works fine when doing it manually. There may be some mistake I am doing, but could not find any other example on 'image_paint()' usage. The same issue looks to be reported here: http://blenderartists.org/forum/showthread.php?381419 [image_paint_test.blend](https://archive.blender.org/developer/F285216/image_paint_test.blend) Thanks for looking.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @LubosLenco

Added subscriber: @LubosLenco
Campbell Barton self-assigned this 2016-02-23 03:57:38 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

This issue was referenced by 6ac0d357d6

This issue was referenced by 6ac0d357d68d35dc24be9c77fc48abfe20fb3657

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Author

I tested the fix and the paint operator now works as expected, which is great. There seems to be some memory leaking though, which gets bigger by every call to ops.paint.image_paint(). After quitting Blender, this is what I get:

'Error: Not freed memory blocks: 38480, total unfreed memory 619.852867 MB'

Any idea what could be going on?

I tested the fix and the paint operator now works as expected, which is great. There seems to be some memory leaking though, which gets bigger by every call to ops.paint.image_paint(). After quitting Blender, this is what I get: 'Error: Not freed memory blocks: 38480, total unfreed memory 619.852867 MB' Any idea what could be going on?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47534
No description provided.