Fix T47534: Crash w/ project-paint from Python